use-cases/demo02.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: demo02
spec: {}
status: {}
