use-cases/mybooking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: my-deployment-name
  name: my-deployment-name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-deployment-name
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: my-deployment-name
    spec:
      containers:
      - image: httpd
        name: httpd
        resources: {}
status: {}
